style.css
/* Global */

:root {
  --background-colour: #2f4454;
  --title-colour: #ffffff;
  --main-text-colour: #ccd6f6;
  --secondary-text-colour: #8892b0;
  --highlight-colour: #da7b93;
  --terminal-background: #232323;
  --terminal-response: #376e6f;
}

html {
  padding: 0;
  margin: 0;
  font-family: "Nunito Sans", sans-serif;
  background-color: var(--background-colour);
}

.page-container {
  width: 80%;
  max-width: 1000px;
  margin: auto;
  align-items: center;
  text-align: center;
}

.in-text-link {
  text-decoration: none;
  color: var(--highlight-colour);
}

.in-text-link:hover {
  text-decoration: underline;
  color: var(--highlight-colour);
  cursor: pointer;
}

.cta-btn {
  border-width: 0.2rem;
  border-style: solid;
  background-color: var(--background-colour);
  border-color: var(--highlight-colour);
  padding: 0.5rem;

  border-radius: 5px;
  text-decoration: none;
  color: var(--main-text-colour);
  font-size: 100%;
}

.cta-btn:hover,
.cta-btn:focus {
  outline: none;
  background-color: var(--highlight-colour);
  cursor: pointer;
}

.text-chunk {
  color: var(--secondary-text-colour);
  margin-bottom: 0px;
}

.highlighted-text {
  color: var(--highlight-colour);
}

.section-title {
  color: var(--main-text-colour);
  font-size: 200%;
  margin-top: 3rem;
  margin-bottom: 0rem;
}

@media screen and (max-width: 767px) {
  .page-container {
    width: 95%;
  }

  .section-title {
    font-size: 250%;
  }
}

/* Navigation Bar */

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-top: 1rem;
  flex-wrap: wrap;
  position: relative;
}

.navigation {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0;
  list-style-type: none;
  width: 100%;
  margin: 0;
}

.navigation li a {
  display: inline-block;
  color: #fff;
  text-decoration: none;
  padding-left: 2rem;
  color: var(--main-text-colour);
}

ul.navigation li:last-child {
  padding-left: 2rem;
}

.nav-link:hover {
  color: var(--highlight-colour);
  cursor: pointer;
}

.hamburger {
  background-color: transparent;
  border: 0;
  color: var(--title-colour);
  font-size: 2.5rem;
  margin: 0rem;
  cursor: pointer;
  display: none;
  position: absolute;
  top: 1.5rem;
  right: -0.5rem;
}

.hamburger:focus {
  outline: none;
}

@media screen and (max-width: 767px) {
  .navigation {
    display: none;
    flex-direction: column;
    width: 100%;
  }

  .nav-item {
    margin-top: 1rem;
  }

  ul.navigation li:first-child {
    margin-top: 0rem;
  }

  .navigation.show {
    display: flex;
    font-size: 1.5rem;
  }

  .hamburger {
    display: block;
  }
}

/* Introductory Banner */

.banner {
  text-align: left;
  padding: 0rem;
  margin: 0;
}

.banner-title {
  font-weight: 900;
  color: var(--title-colour);
  margin: 0;
  font-size: 300%;
}

@media screen and (max-width: 400px) {
  h1 span::before {
    content: "\A";
    white-space: pre;
  }
}

.banner-tagline {
  margin: 0rem auto 1rem auto;
  color: var(--main-text-colour);
  margin-bottom: 0px;
  font-size: 200%;
}

.banner-description {
  margin-top: 0px;
  width: 75%;
  color: var(--secondary-text-colour);
}

/* Animated Terminal Window */

.terminal {
  margin: 1rem 0 1rem 0;
  color: white;
  text-align: left;
  border-radius: 10px;
  background-color: var(--terminal-background);
  height: max-content;
  box-shadow: 6px 6px 13px 0px rgba(50, 50, 50, 0.93);
  position: relative;
}

.restart-terminal {
  position: absolute;
  bottom: 1rem;
  right: 1rem;
}

.terminal-menu-bar {
  background-color: black;
  height: 1.5rem;
  width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

pre {
  white-space: pre-line;
  margin-top: 1rem;
  margin-left: 2rem;
  margin-right: 2rem;
}

.code {
  font-size: 130%;
  line-height: 2;
}

.code-response {
  color: var(--terminal-response);
}

.code-response-link {
  text-decoration: none;
  color: var(--terminal-response);
}

.code-response-link:hover {
  text-decoration: underline;
  cursor: pointer;
}

#refresh-terminal:hover {
  cursor: pointer;
}

/* Project Cards */

.cards {
  margin-top: 2rem;
  display: grid;

  grid-gap: 2rem;
}

.card {
  border: none;
  border-radius: 8px;
  background: linear-gradient(145deg, #2a3d4d, #32495b);
  box-shadow: 6px 6px 16px #141d24, -6px -6px 16px #4a6b86;
  color: var(--secondary-text-colour);
  padding: 1rem;
  text-align: left;
  height: max-content;
  position: relative;
  font-size: 100%;
  width: 100%;
}

.card:focus {
  outline: none;
}

.card:hover {
  background: var(--highlight-colour);
  color: var(--title-colour);
  cursor: pointer;
}

/* .view-source-btn {
  margin-left: 1rem;
} */
.card-git-link {
  text-decoration: none;
  color: var(--secondary-text-colour);
  position: absolute;
  bottom: 0rem;
  right: 3rem;
}

.card-git-icon {
  position: absolute;
  bottom: 1rem;
  right: 1rem;
}

.project-title {
  font-size: 130%;
  margin-bottom: 0.5rem;
}
.project-description {
  margin-bottom: 2rem;
}

.tech-badge-container {
  width: 80%;
}

.tech-badge {
  text-align: center;
  padding: 4px;
  margin: 2px;
  border-radius: 13px;
  display: inline-block;
  color: white;
  background-color: var(--highlight-colour);
}

@media screen and (max-width: 315px) {
  .card-git-link {
    display: none;
  }
}

/* Contact Me */

.contact {
  padding: 0rem;
  display: grid;
  justify-content: center;
}

.contact-icons {
  padding-bottom: 2rem;
}

.icon {
  padding: 0rem 0.5rem 0rem 0.5rem;
}

/* Footer */

.footer {
  color: var(--secondary-text-colour);
}

/* Modal */

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  background-color: var(--background-colour);
  margin: 10% auto;
  padding: 20px;

  border-radius: 8px;
  width: 85%;
  position: relative;
}

.section-title#project-title {
  margin-top: 0rem;
}

.vid {
  margin-bottom: 1rem;
}
.vid:focus {
  outline: none;
}

.close-modal-icon {
  position: absolute;
  top: -2rem;
  left: -1rem;
}

.close-modal-icon:hover {
  cursor: pointer;
}

@media screen and (max-width: 570px) {
  .close-modal-icon {
    position: absolute;
    top: 0.2rem;
    left: 0.2rem;
  }
}

